Fix sidebar if a widget is too wide

--- a/wp-content/themes/WPUTheme/css/e-sidebar.css
+++ b/wp-content/themes/WPUTheme/css/e-sidebar.css
@@ -4,6 +4,12 @@
   Sidebar
 ---------------------------------------------------------- */
 
+.main-sidebar--widgets,
+.main-sidebar--widgets .widget {
+    max-width: 100%;
+    overflow: auto;
+}
+
 .main-sidebar .widget + .widget {
     margin-top: 8px;
     padding-top: 8px;
